stuf/src/p4/tests/t014.err
Semantic error on line 2: Variable 'ziggurat' was not declared before it was used.
