stuf/src/p4/tests/t014.gpl
triangle pyramid;
int top=ziggurat.x; //error: undeclared variable
